# flow-doctor

./: .coverage  .gitignore  .gitleaks-baseline.json  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pip-audit-ignore.txt
.github/workflows/: auto-tag.yml  changelog.yml  ci.yml  fix.yml  flow-doctor-fix.yml  publish.yml  release.yml  version-bump-check.yml
examples/: smoke_test.py
flow_doctor/: __init__.py  _protocol.py  otel.py
flow_doctor/core/: _context.py  builder.py  client.py  config.py  constants.py  dedup.py  errors.py  handler.py  models.py  settings.py
flow_doctor/diagnosis/: agent_provider.py  context.py  provider.py
flow_doctor/fix/: cli.py  generator.py
flow_doctor/notify/: __init__.py  base.py  configs.py  github.py  s3.py  slack.py  telegram.py  webpush.py
flow_doctor/remediation/: executor.py
flow_doctor/storage/: base.py  dynamodb.py  sqlite.py
flow_doctor/testing/: __init__.py  _plugin.py  _recording.py
tests/: test_action_target.py  test_builder.py  test_config.py  test_context_assembler.py  test_decision_trace.py  test_dedup.py  test_default_model_canonical.py  test_deprecations.py  test_diagnosis_provider.py  test_dynamodb_storage.py  test_fail_loud.py  test_fix_cli.py  test_fix_telegram_pr.py  test_handler.py  test_notifications.py  test_notify_event.py  test_notify_routing.py  test_otel_adapter.py  test_protocol_and_context.py  test_remediation_pipeline.py  test_remediation_telegram_notifier.py  test_reporter.py  test_s3_notifier.py  test_settings.py  test_telegram_notifier.py  test_testing_recorder.py  test_version_pin.py  test_webpush_notifier.py
