[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-doctor"
version = "0.4.0"
description = "Pipeline error handler: capture, deduplicate, diagnose, and auto-fix failures."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "Brian McMahon"}]
keywords = ["error-handling", "pipeline", "monitoring", "diagnosis", "auto-fix", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
slack = ["requests>=2.28"]
diagnosis = ["anthropic>=0.40"]
remediation = ["boto3>=1.26"]
s3 = ["boto3>=1.26"]
agent = ["claude-agent-sdk>=0.1", "anthropic>=0.40"]
all = ["requests>=2.28", "anthropic>=0.40", "boto3>=1.26"]
dev = [
    "pytest>=7.0",
    "requests>=2.28",
    "anthropic>=0.40",
]

[project.urls]
Homepage = "https://github.com/cipher813/flow-doctor"
Repository = "https://github.com/cipher813/flow-doctor"
Issues = "https://github.com/cipher813/flow-doctor/issues"

[project.scripts]
flow-doctor = "flow_doctor.fix.cli:main"

[tool.setuptools.packages.find]
include = ["flow_doctor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
