[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-doctor"
version = "0.6.0rc5"
description = "Pipeline error handler: capture, deduplicate, diagnose, and auto-fix failures."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "Brian McMahon"}]
keywords = [
    "error-handling",
    "error-monitoring",
    "exception-handling",
    "observability",
    "monitoring",
    "alerting",
    "pipeline",
    "diagnosis",
    "auto-fix",
    "llm",
    "anthropic",
    "claude",
    "telegram",
    "slack",
    "self-hosted",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    # Typed FLOW_DOCTOR_* settings contract + .env / secrets-dir resolution
    # (flow_doctor.core.settings). Light — pure Python on top of pydantic.
    "pydantic-settings>=2.0",
    # .env file parsing for pydantic-settings (Docker/compose self-host UX).
    "python-dotenv>=1.0",
    # PEP 702 @deprecated backport for Python 3.9-3.12 (stdlib in 3.13+).
    "typing_extensions>=4.5",
]

[project.optional-dependencies]
slack = ["requests>=2.28"]
diagnosis = ["anthropic>=0.40"]
remediation = ["boto3>=1.26"]
s3 = ["boto3>=1.26"]
agent = ["claude-agent-sdk>=0.1", "anthropic>=0.40"]
all = ["requests>=2.28", "anthropic>=0.40", "boto3>=1.26"]
dev = [
    "pytest>=7.0",
    "requests>=2.28",
    "anthropic>=0.40",
]

[project.urls]
Homepage = "https://github.com/cipher813/flow-doctor"
Repository = "https://github.com/cipher813/flow-doctor"
Issues = "https://github.com/cipher813/flow-doctor/issues"
Changelog = "https://github.com/cipher813/flow-doctor/blob/main/CHANGELOG.md"

[project.scripts]
flow-doctor = "flow_doctor.fix.cli:main"

[project.entry-points.pytest11]
flow_doctor_testing = "flow_doctor.testing._plugin"

[tool.setuptools.packages.find]
include = ["flow_doctor*"]

[tool.setuptools.package-data]
# Ship PEP 561 marker so mypy/pyright treat flow-doctor's annotations as
# authoritative when consumers depend on flow-doctor in --strict mode.
flow_doctor = ["py.typed"]

[tool.coverage.run]
# Canonical coverage entry — invoke as
#   python -m coverage run -m pytest && python -m coverage report
# pytest-cov's --cov= flag misreports module-level statement coverage
# under editable installs (`pip install -e .`) because it instruments
# AFTER the import has already happened; the direct ``coverage run``
# path measures correctly.
source = ["flow_doctor"]
branch = true
omit = [
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # Our own tests exercise the legacy flow_doctor.init() path. Downstream
    # consumers still see the DeprecationWarning at their call site; this
    # filter only suppresses the noise inside our suite.
    "ignore:flow_doctor.init.. is deprecated:DeprecationWarning",
]
